# obfy

./: CHANGELOG.md  CMakeLists.txt  MACROS.md  README.md
.github/workflows/: build.yml
cmake/: obfyConfig.cmake.in
code-blocks/example/: example.cbp
example/: main.cpp
examples/: bytes.cpp  license.cpp  obf.cpp  string.cpp
include/obfy/: meta.hpp  obfy.hpp  obfy_bytes.hpp  obfy_call.hpp  obfy_str.hpp
scripts/: run_tests.sh
tests/: invalid_str_char.cpp  invalid_wstr_char.cpp  license_tests.cpp  obfy_tests.cpp
vcpkg-port/obfy/: portfile.cmake  vcpkg.json
